--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.3",
     "node-slack": "0.0.7",
     "nodemon": "^1.4.1",
-    "slack-client": "^1.4.1"
+    "slack-client": "^1.4.1",
+    "twilio": "^2.3.0"
   }
 }
