--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "owlbot",
   "version": "1.0.0",
   "description": "A Slack bot that connects to Magic",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/nodemon server.js"
   },
   "repository": {
     "type": "git",
