--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "owlbot",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A Slack bot that connects to Magic",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
