Switch to using env variables

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "owlbot",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A Slack bot that connects to Magic",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/nodemon index.js"
   },
   "repository": {
     "type": "git",
