--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
+    "forever": "^0.15.1",
     "lodash": "^3.10.1",
     "node-slack": "0.0.7",
     "nodemon": "^1.4.1",
